# TDT4265-Snowpole

./: .gitignore  README.md  exploratory-data-analysis.ipynb  main.py  preview.ipynb  pyproject.toml
snowpole-detector/: settings.py
snowpole_detector/: ds_apply_augmentations.py  ds_split_images.py  ds_synthetic_dataset.py  ds_yolo_to_coco.py  inference.py  rfdetr_chp_convert.py  settings.py  trainer.py  tune_threshold.py  visualize_predictions.py
